--- a/inmigrayuda/templates/PreguntasFrecuentes.html
+++ b/inmigrayuda/templates/PreguntasFrecuentes.html
@@ -33,7 +33,7 @@
         <a class="nav-link" id="btnContacto" href="/contacto">Contacto</a>
         <a class="nav-link" id="btnCategorias" href="/categorias">Categorias</a>
 
-        <ul class="navbar-nav my-2 my-lg-0">
+        <ul class="navbar-nav my-2 my-lg-0" style="padding-left: 550px">
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a href="{% url "cerrar_session" %}">Cerrar Sesión</a>
@@ -86,8 +86,9 @@
                   <p class="card-text">{{p.respuesta}}</p>
                 </div>
               </div>
+              <br>
               {% endfor %} 
-
+            </div>
     <br>
     <footer class="page-footer font-small blue ">
 
