--- a/inmigrayuda/templates/login.html
+++ b/inmigrayuda/templates/login.html
@@ -33,7 +33,7 @@
       <div class="checkbox mb-3">
        
       </div>
-      <button class="btn btn-primary btn-lg btn-block" type="submit">Iniciar Sesión</button>
+      <button class="btn btn-lg btn-block" style="background-color: rgba(0, 123, 139, 0.719)" type="submit">Iniciar Sesión</button>
       <br>
       <p class="tituloLogin">&copy; inmigrayuda - 2018</p>
     </form> 
