--- a/inmigrayuda/templates/noticias.html
+++ b/inmigrayuda/templates/noticias.html
@@ -91,7 +91,7 @@
                         <!-- Noticia 1 -->
                         <h2>    {{n.titulo}}    </h2>
 
-                        <img class=" img-fluid" src="/media/{{p.foto}}" alt="no foto" srcset="">
+                        <img class=" img-fluid" src="/fotos/{{p.foto}}" alt="no foto" srcset="">
                         
                         <hr>
 
