Se agregaron elementos a categoria Salud

--- a/inmigrayuda/templates/categorias.html
+++ b/inmigrayuda/templates/categorias.html
@@ -70,8 +70,6 @@
                 <div class="tab-content" id="v-pills-tabContent">
                     <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">
                         <br>
-                        
-
                         <div class="container-fluid">
                                 <h4>Ministerios</h4>
                                 <a href="https://www.interior.gob.cl/" target="_blank">
@@ -165,14 +163,22 @@
 
                         
                     </div>
-                    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                        <h4>no se</h4>
+                    <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab" name="CategoriaSalud">
+                        <a href="https://www.minsal.cl/" target="_blank">
+                            <button class="estilo dos">Ministerio de Salud </button>
+                        </a>
+                        <a href="http://www.supersalud.gob.cl/664/w3-propertyname-582.html" target="_blank">
+                            <button class="estilo dos">SuperIntendencia de Salud </button>
+                        </a>
+                        <a href="http://www.saludnoticias.cl/como-funciona-el-sistema-de-salud-en-chile/" target="_blank">
+                            <button class="estilo dos">Funcionamiento Sistema Salud en Chile </button>
+                        </a>
                     </div>
                     <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
                         <h4>no se</h4>
                     </div>
                     <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-                        <h4>no se</h4>
+                       
                     </div>
                 </div>
             </div>
