Se agregaron elementos en las 2 ultimas categorias

--- a/inmigrayuda/templates/categorias.html
+++ b/inmigrayuda/templates/categorias.html
@@ -174,11 +174,29 @@
                             <button class="estilo dos">Funcionamiento Sistema Salud en Chile </button>
                         </a>
                     </div>
-                    <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab">
-                        <h4>no se</h4>
+
+                    <div class="tab-pane fade" id="v-pills-messages" role="tabpanel" aria-labelledby="v-pills-messages-tab" name="Comunidades">
+                        <a href="http://www.exteriores.gob.es/Embajadas/SANTIAGODECHILE/es/VivirEn/Paginas/Establecerse.aspx" target="_blank">
+                            <button class="estilo dos">Ministerio Asuntos Exteriores y Cooperación </button>
+                        </a>
+                        <a href="http://comunidad-org.cl/" target="_blank">
+                            <button class="estilo dos">Comunidad Organizaciones Solidarias</button>
+                        </a>
+                        <a href="http://www.mamchile.cl/" target="_blank">
+                            <button class="estilo dos">Movimiento Acción Migrante</button>
+                        </a>
                     </div>
-                    <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab">
-                       
+
+                    <div class="tab-pane fade" id="v-pills-settings" role="tabpanel" aria-labelledby="v-pills-settings-tab" name="Categoria Casas">
+                        <a href="https://www.homify.cl/libros_de_ideas/3440015/guia-practica-como-postular-a-la-casa-propia-en-chile" target="_blank">
+                            <button class="estilo dos">Guía Postulación Casa</button>
+                        </a>
+                        <a href="http://www.masdeco.cl/chile-por-zonas/" target="_blank">
+                            <button class="estilo dos">Chile Por Zonas</button>
+                        </a>
+                        <a href="https://inmuebles.mercadolibre.cl/casas/arriendo/" target="_blank">
+                            <button class="estilo dos">Mercado Libre Arriendo de Casas</button>
+                        </a
                     </div>
                 </div>
             </div>
