--- a/inmigrayuda/templates/categorias.html
+++ b/inmigrayuda/templates/categorias.html
@@ -73,91 +73,91 @@
                         <div class="container-fluid">
                                 <h4>Ministerios</h4>
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio del interior y seguridad publica </button>
+                                    <button class="estilo dos"> Ministerio del Interior y Seguridad Pública </button>
                                 </a>
 
                                 <a href="http://www.msgg.gob.cl/wp/" target="_blank">
-                                    <button class="estilo dos"> ministerio secretaria general del gob </button>
+                                    <button class="estilo dos"> Ministerio Secretaría General del Gob </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de economia, fomento y turismo </button>
+                                    <button class="estilo dos"> Ministerio de Economía, Fomento y Turismo </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de justicia y derechos humanos </button>
+                                    <button class="estilo dos"> Ministerio de Justicia y Derechos Humanos </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de salud </button>
+                                    <button class="estilo dos"> Ministerio de Salud </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de mineria </button>
+                                    <button class="estilo dos"> Ministerio de Mineria </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de energia </button>
+                                    <button class="estilo dos"> Ministerio de Energia </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de relaciones exteriores </button>
+                                    <button class="estilo dos"> Ministerio de Relaciones Exteriores </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de hacienda </button>
+                                    <button class="estilo dos"> Ministerio de Hacienda </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de desarrollo social </button>
+                                    <button class="estilo dos"> Ministerio de Desarrollo Social </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de trabajo y prevision social </button>
+                                    <button class="estilo dos"> Ministerio de Trabajo y Prevision Social </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de vivienda y urbanismo </button>
+                                    <button class="estilo dos"> Ministerio de Vivienda y Urbanismo </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de transporte y telecomunicaciones </button>
+                                    <button class="estilo dos"> Ministerio de Transporte y Telecomunicaciones </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio del medio ambiente </button>
+                                    <button class="estilo dos"> Ministerio del Medio Ambiente </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de las culturas, las artes y el patrimonio </button>
+                                    <button class="estilo dos"> Ministerio de las Culturas, Las Artes y El Patrimonio </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de defensa nacional </button>
+                                    <button class="estilo dos"> Ministerio de Defensa Nacional </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de secretaria general de la presidencia  </button>
+                                    <button class="estilo dos"> Ministerio de Secretaria General de la Presidencia  </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de educacion </button>
+                                    <button class="estilo dos"> Ministerio de Educación </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de obras publicas </button>
+                                    <button class="estilo dos"> Ministerio de Obras Públicas </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de agricultura </button>
+                                    <button class="estilo dos"> Ministerio de Agricultura </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio de bienes nacionales </button>
+                                    <button class="estilo dos"> Ministerio de Bienes Nacionales </button>
                                 </a>
 
                                 <a href="https://www.interior.gob.cl/" target="_blank">
-                                    <button class="estilo dos"> ministerio del deporte </button>
+                                    <button class="estilo dos"> Ministerio del Deporte </button>
                                 </a>
                         </div>
 
