--- a/inmigrayuda/templates/contacto.html
+++ b/inmigrayuda/templates/contacto.html
@@ -54,27 +54,30 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="form-area">
-                    <form role="form">
+                    <form role="form" id="formulario" name="formulario">
                         <br style="clear:both">
                         <h3 style=" text-align: center;">Contactanos</h3>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="nombre" name="nombre" placeholder="Nombre" required>
+                            <input type="text" class="form-control error" onchange="miFuncion(event)" onkeydown="miFuncion(event)" onkeyup="miFuncion(event)" id="nombre" name="nombre" placeholder="Nombre" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="email" name="email" placeholder="Email" required>
+                            <input type="email" class="form-control error" id="email" name="correo" placeholder="Email" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="nacionalidad" name="nacionalidad" placeholder="Nacionalidad" required>
+                            <select class="form-control error" id="nacionalidad" name="nacionalidad">
+                                <option >
+                                    Seleccione Nacionalidad
+                                </option>
+                            </select>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="asunto" name="asunto" placeholder="Asunto" required>
+                            <input type="text" class="form-control error" id="asunto" name="asunto" placeholder="Asunto" required>
                         </div>
                         <div class="form-group">
-                            <textarea class="form-control" type="textarea" id="mensaje" placeholder="Mensaje" maxlength="140" rows="7"></textarea>
+                            <textarea class="form-control error" type="textarea" id="mensaje" name="mensaje" placeholder="Mensaje" maxlength="140" rows="7"></textarea>
 
                         </div>
-
-                        <button type="button" id="submit" name="submit" class="btn btn-primary pull-right">Enviar</button>
+                        <button type="submit" id="enviar" name="enviar" class="btn btn-primary pull-right">Enviar</button>
                     </form>
                 </div>
             </div>
@@ -113,11 +116,12 @@
     </footer>
 
     <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-        <script src="{% static 'js/app' %}"></script>
+    crossorigin="anonymous"></script>
+    <script src="{% static 'js/app.js' %}"></script>
 </body>
 
 </html>
