--- a/inmigrayuda/templates/contacto.html
+++ b/inmigrayuda/templates/contacto.html
@@ -71,7 +71,7 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control error" id="asunto" name="asunto" placeholder="Asunto" required>
+                            <input required type="text" class="form-control error" id="asunto" name="asunto" placeholder="Asunto" >
                         </div>
                         <div class="form-group">
                             <textarea class="form-control error" type="textarea" id="mensaje" name="mensaje" placeholder="Mensaje" maxlength="140" rows="7"></textarea>
@@ -116,7 +116,8 @@
     </footer>
 
     <script src="{% static 'js/jquery-3.3.1.js' %}"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+    <script src="http://jqueryvalidation.org/files/dist/jquery.validate.min.js"></script>
+    <script src="http://jqueryvalidation.org/files/dist/additional-methods.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
